# algo_bnb

./: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  _version.py  changelog.md  pyproject.toml  quickstart_guide.md
.github/workflows/: ci.yml
cryptoalgotrading/: aux.py  cryptoalgotrading.py  entry.py  exit.py  lib_bittrex.py  riskmanagement.py  var.py
test/: test_aux.py  test_cryptoalgotrading.py  test_entry.py  test_exit.py  test_finance.py
