[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptoalgotrading"
description = "Algotrading framework for crypto currencies"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Ivo Petiz", email = "ivopetiz@gmail.com"},
]
maintainers = [
    {name = "Ivo Petiz", email = "ivopetiz@gmail.com"},
]
keywords = ["algotrading", "trading", "cryptocurrencies", "finance", "crypto", "bitcoin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "requests>=2.32.0",
    "python-binance>=1.0.19",
    "influxdb>=5.3.0",
    "plyer>=2.1.0",
    "certifi>=2024.0.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.0",
    "urllib3>=2.0.0",
    "idna>=3.7",
    "types-requests>=2.32.4.20250913",
    "tables>=3.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/ivopetiz/algotrading"
Repository = "https://github.com/ivopetiz/algotrading"
Issues = "https://github.com/ivopetiz/algotrading/issues"

[tool.hatch.version]
source = "code"
path = "_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cryptoalgotrading",
    "/_version.py",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["cryptoalgotrading"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["cryptoalgotrading"]

[tool.black]
target-version = ["py312", "py313", "py314"]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["cryptoalgotrading"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol):",
    "@(abc\\.)?abstractmethod",
]
